nav bar updates

--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                         <a class="nav-link" href="portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
                 <a href="#" class="btn btn-outline ms-lg-3">Get a Quote</a>
