--- a/about.html
+++ b/about.html
@@ -666,7 +666,7 @@
     </section>
 
     <!-- Team Section -->
-    <section class="team-section">
+    <!-- <section class="team-section">
         <div class="container">
             <h2 class="section-title text-center" data-aos="fade-up">Meet Our Leadership</h2>
             <p class="text-center mb-5" data-aos="fade-up" data-aos-delay="100">The dedicated professionals driving our
@@ -745,7 +745,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- CTA Section -->
     <section class="py-5 bg-light">
