--- a/index.html
+++ b/index.html
@@ -663,8 +663,8 @@
             <h2 class="mb-4">Ready to Experience the AVNEI YAQAR Difference?</h2>
             <p class="lead mb-5">Contact us today to discuss how we can meet your needs with our premium products and
                 services.</p>
-            <a href="#" class="btn btn-primary btn-lg me-3">Get a Free Quote</a>
-            <a href="#" class="btn btn-outline-dark btn-lg">Contact Us</a>
+            <a href="contact.html" class="btn btn-primary btn-lg me-3">Get a Free Quote</a>
+            <a href="contact.html" class="btn btn-outline-dark btn-lg">Contact Us</a>
         </div>
     </section>
 
